--- a/src/app/file-updater/file-updater.css
+++ b/src/app/file-updater/file-updater.css
@@ -53,6 +53,23 @@ input[type='file']:hover {
   border-color: #3a75c4;
 }
 
+input[type='file']::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: var(--primary-color);
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: var(--text-color);
+  cursor: pointer;
+  transition: background 0.2s ease-in-out;
+}
+
+input[type='file']::file-selector-button:hover {
+  background-color: #3a75c4;
+  transform: translateY(-1px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
 button {
   background-color: var(--primary-color);
   color: white;
