--- a/src/styles.css
+++ b/src/styles.css
@@ -16,5 +16,5 @@
 body {
   margin: 0;
   background-color: var(--background-color);
-  color: var(--text-color);
+  /* color: var(--text-color); */
 }
