--- a/src/app/file-updater/file-updater.html
+++ b/src/app/file-updater/file-updater.html
@@ -41,6 +41,7 @@
   } @if (updatedLinesInfo().length > 0) {
   <div class="updates-log">
     <h3>Aangepaste regels ({{ updatedLinesInfo().length }}):</h3>
+
     @for (info of updatedLinesInfo(); track info.originalLine) {
     <div class="update-info">
       <app-diff-viewer
@@ -50,5 +51,10 @@
     </div>
     }
   </div>
+  } @if(processedContent() !== null && originalContent() !== null) {
+  <app-file-diff-viewer
+    [originalContent]="originalContent()!"
+    [updatedContent]="processedContent()!"
+  ></app-file-diff-viewer>
   }
 </div>
