--- a/src/app/file-updater/file-updater.html
+++ b/src/app/file-updater/file-updater.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Dienstverband updater</h1>
+  <h1>Compas - Youforce dienstverband conversie</h1>
   <p>
     Vergelijkt dienstverbandnummers uit de Compas export (DPIA100 tekst bestanden) met actieve
     dienstverbanden zoals bekend in Youforce. Indien voor een personeelsnummer een afwijkend
