--- a/src/app/download-section/download-section.html
+++ b/src/app/download-section/download-section.html
@@ -1,4 +1,5 @@
 <div class="download-section">
+  <app-help-icon [tooltip]="tooltipOptions"></app-help-icon>
   <p>Het bestand is verwerkt. Je kunt nu het aangepaste bestand downloaden.</p>
   <a (click)="downloadFile.emit()" class="download-link">Download aangepast bestand</a>
   <div class="file-size-info">
