--- a/src/app/excel-upload-section/excel-upload-section.html
+++ b/src/app/excel-upload-section/excel-upload-section.html
@@ -1,4 +1,5 @@
 <div class="upload-section">
+  <app-help-icon [tooltip]="tooltipOptions"></app-help-icon>
   <h3>Upload excel: actieve dienstverbanden uit Youforce</h3>
   <input type="file" (change)="onFileSelected($event)" accept=".xlsx" />
   <button (click)="uploadFile()" [disabled]="!selectedFile() || isLoading()">
