Update instructions for uploading Excel file

--- a/src/app/file-updater/file-updater.html
+++ b/src/app/file-updater/file-updater.html
@@ -8,8 +8,7 @@
   <ol>
     <h3>Sluit dit tabblad <strong>niet</strong> voordat alle DPIA100 bestanden verwerkt zijn!</h3>
     <li>
-      Upload een actueel excel bestand met actieve dienstverbanden uit Youforce (bestaande
-      rapportage). Pas dit bestand niet handmatig aan, upload het zoals het uit Youforce komt!
+      Upload een actueel excel bestand met actieve dienstverbanden uit Youforce (rapport: "Medewerkerslijst (Operationeel)", met filter "Status in dienst": Actief). Pas dit bestand niet handmatig aan, upload het zoals het uit Youforce komt!
       <strong>Deze stap hoeft slechts 1x per sessie gedaan te worden</strong>.
     </li>
     <li>Upload een DPIA100 .TXT bestand. <strong>Herhaal deze stap voor CAD/CA2/WSW</strong>.</li>
